@@ -53,10 +53,10 @@ protected:
     bool OnKeyDown(GdkEventKey* evt);
 protected:
     void OnMouseMove(GdkEventMotion* evt);
-#ifdef USE_MOUSE
+#if defined(USE_MOUSE) && !defined(MOZ_PLUGIN)    
     void OnMouseScroll(GdkEventScroll* evt);
     void OnLButtonUp(GdkEventButton* evt);
-#endif
+#endif // defined(USE_MOUSE) && !defined(MOZ_PLUGIN)
     void OnRButtonDown(GdkEventButton* evt);
     bool PreKeyDown(GdkEventKey* evt);
     virtual void DoPasteFromClipboard(string text, bool contain_ansi_color);
